chore(package.json): add zustand package as a dependency to the frontend package.json file
fix(codeTabsComponent): remove unused imports and update import for FlowsContext

fix(headerComponent): remove unused imports and update import for FlowsContext, useDarkStore, and remove darkContext

fix(tagsSelectorComponent): remove unused import and update import for useDarkStore

refactor(darkStore): move darkContext functionality to a separate zustand store called darkStore

refactor(index.tsx): remove import for darkContext and DarkProvider

fix(codeAreaModal): remove unused imports and update import for useDarkStore

feat(darkStore): add zustand store for managing dark mode state, stars count, and gradient index

feat(darkStore): fetch and set stars count from API in darkStore

feat(darkStore): generate and set random gradient index in darkStore

feat(darkStore): add updateDark, updateStars, and updateGradientIndex actions to darkStore

feat(darkStore): initialize dark mode state, stars count, and gradient index in darkStore

feat(darkStore): fetch and set stars count from API in darkStore

feat(darkStore): generate and set random gradient index in darkStore

feat(darkStore): add updateDark, updateStars, and updateGradientIndex actions to darkStore

feat(darkStore): initialize dark mode state, stars count, and gradient index in darkStore

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -66,7 +66,8 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.0",
     "vite-plugin-svgr": "^3.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.4.7"
   },
   "scripts": {
     "dev:docker": "vite --host 0.0.0.0",
