--- a/src/frontend/.gitignore
+++ b/src/frontend/.gitignore
@@ -24,3 +24,7 @@ yarn-error.log*
 /test-results/
 /playwright-report/*/
 /playwright/.cache/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
