--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -122,6 +122,7 @@
     "prettier-plugin-tailwindcss": "^0.3.0",
     "pretty-quick": "^3.1.3",
     "tailwindcss": "^3.3.3",
+    "tailwindcss-dotted-background": "^1.1.0",
     "typescript": "^5.2.2",
     "vite": "^4.5.2"
   }
