--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -124,6 +124,7 @@
     "tailwindcss": "^3.3.3",
     "tailwindcss-dotted-background": "^1.1.0",
     "typescript": "^5.2.2",
+    "ua-parser-js": "^1.0.37",
     "vite": "^4.5.2"
   }
 }
