remove dead code and unused dependencies (#1488)
* added esLint to frontend project

* Remove formModalPropsType from index.ts

* Remove chat input component

* Delete codeBlock and fileComponent components

* Remove unused code for BuildTrigger component

* Refactor Chat component and remove unused code

* Delete chatTrigger component

* Delete unused SVG and PNG files

* Remove LightTooltipComponent

* Remove LoadingSpinner component

* Delete RadialProgressComponent

* Delete ReactTooltipComponent

* Remove TooltipComponent

* Delete ElementStack component

* Remove ToggleComponent

* Remove unused dependencies from package.json

* Update package json

* add accordion

* change accordion sidebar to shadcn

* added million lint

* Remove MillionCompiler plugin from Vite config

* Refactor authContext autoLogin dependency

* Add console.log statements for debugging

* Refactored position of elements in IO branch

* fix assets imports

* fix re-render on pageComponent

* Add StrictMode to root render and update key in ExtraSidebarComponent

* Add showCanvas state and useEffect to update it to improve performance

* Refactor FlowPage component and remove ExtraSidebar from main area

* Refactor FlowToolbar to prevent Unnecessary re-render

* get node position with zustand in NodeToolbarComponent

* Fix ShareModal rendering issue

* Remove ExtraSidebar component and fix CodeAreaComponent bug

* Refactor: Use useMemo to avoid unnecessary render

* merge zustandIo

* Remove console.log statements

* Update package-lock.json and refactor extraSidebarComponent

* update package json

* Remove unused msgpack wheel file and add new nvidia_nvjitlink_cu12 wheel file

* Fix import formatting in loading.py

* Imported missing module and removed unused import

---------

Co-authored-by: cristhianzl <cristhian.lousa@gmail.com>
Co-authored-by: Lucas Oliveira <lucas.edu.oli@hotmail.com>
Co-authored

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -3,12 +3,8 @@
   "version": "0.1.2",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
-    "@mui/material": "^5.14.7",
-    "@preact/signals-react": "^2.0.0",
+    "@million/lint": "^0.0.73",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -29,9 +25,7 @@
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/axios": "^0.14.0",
-    "accordion": "^3.0.2",
     "ace-builds": "^1.24.1",
-    "add": "^2.0.6",
     "ansi-to-html": "^0.7.2",
     "axios": "^1.5.0",
     "base64-js": "^1.5.1",
@@ -43,6 +37,7 @@
     "framer-motion": "^11.0.6",
     "lodash": "^4.17.21",
     "lucide-react": "^0.331.0",
+    "million": "^3.0.6",
     "moment": "^2.29.4",
     "playwright": "^1.42.0",
     "react": "^18.2.0",
@@ -55,8 +50,6 @@
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.15.0",
     "react-syntax-highlighter": "^15.5.0",
-    "react-tabs": "^6.0.2",
-    "react-tooltip": "^5.21.1",
     "react18-json-view": "^0.2.3",
     "reactflow": "^11.9.2",
     "rehype-mathjax": "^4.0.3",
@@ -64,8 +57,6 @@
     "remark-math": "^5.1.1",
     "shadcn-ui": "^0.2.3",
     "short-unique-id": "^4.4.4",
-    "switch": "^0.0.0",
-    "table": "^6.8.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.0",
@@ -117,6 +108,8 @@
     "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.15",
     "daisyui": "^4.0.4",
+    "eslint": "^8.57.0",
+    "eslint-plugin-node": "^11.1.0",
     "postcss": "^8.4.29",
     "prettier": "^2.8.8",
     "prettier-plugin-organize-imports": "^3.2.3",
