--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -33,6 +33,7 @@
     "clsx": "^1.2.1",
     "cmdk": "^1.0.0",
     "dompurify": "^3.0.5",
+    "dotenv": "^16.4.5",
     "esbuild": "^0.17.19",
     "framer-motion": "^11.0.6",
     "lodash": "^4.17.21",
