🔧 (.pre-commit-config.yaml): add eslint-plugin-react@latest as a dependency to improve linting for React components 🔧 (.eslintrc.json): update eslint configuration to include additional plugins, parser, parserOptions, and env settings to improve linting for React components and TypeScript files ♻️ (index.tsx): remove unnecessary empty line to improve code readability

--- a/src/frontend/.eslintrc.json
+++ b/src/frontend/.eslintrc.json
@@ -2,15 +2,18 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "plugin:prettier/recommended",
-    "standard"
+    "plugin:prettier/recommended"
   ],
-  "plugins": ["react"],
+  "plugins": ["react", "import-helpers", "prettier"],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 2018
+    "project": ["./tsconfig.node.json", "./tsconfig.json"],
+    "extraFileExtensions:": [".mdx"],
+    "extensions:": [".mdx"]
   },
   "env": {
-    "browser": true
+    "browser": true,
+    "es2021": true
   },
   "settings": {
     "react": {
