ci: test ci workflow

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,7 +2,7 @@ name: lint
 
 on:
   push:
-    branches: [main]
+    branches: [ragstack-main]
     paths:
       - "poetry.lock"
       - "pyproject.toml"
