--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -5,7 +5,7 @@ on:
     branches: ["ragstack-main", "main"]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: ["dev"]
+    branches: ["ragstack-main"]
   schedule:
     - cron: "17 2 * * 1"
 
