--- a/.github/workflows/python_test.yml
+++ b/.github/workflows/python_test.yml
@@ -2,6 +2,8 @@ name: test
 
 on:
   pull_request:
+    branches:
+      - ragstack-main
     paths:
       - "poetry.lock"
       - "pyproject.toml"
