--- a/.github/workflows/python_test.yml
+++ b/.github/workflows/python_test.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - ragstack-main
     paths:
+      - "./.github/workflows/**"
       - "poetry.lock"
       - "pyproject.toml"
       - "src/backend/**"
