--- a/.github/workflows/typescript_test.yml
+++ b/.github/workflows/typescript_test.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - ragstack-main
     paths:
-      - "./.github/workflows/**"
+      - ".github/workflows/**"
       - "src/frontend/**"
 
 env:
