--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,7 @@ langflow = "langflow.__main__:main"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
-# TO CHANGE WHEN RELEASED
-ragstack-ai-langflow-base = { path = "./src/backend/base", develop = true }
+ragstack-ai-langflow-base = "0.0.1"
 beautifulsoup4 = "^4.12.2"
 google-search-results = "^2.4.1"
 google-api-python-client = "^2.118.0"
