--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ chromadb = "^0.4.24"
 langchain-anthropic = "^0.1.6"
 zep-python = { version = "^2.0.0rc5", allow-prereleases = true }
 langchain-google-vertexai = "^1.0.3"
+langchain-pinecone = "^0.1.0"
 
 [tool.poetry.group.test.dependencies]
 ragstack-ai-langflow-base = { path = "./src/backend/base", develop = true }
