lint and format

--- a/ragstack/tests/pyproject.toml
+++ b/ragstack/tests/pyproject.toml
@@ -19,12 +19,7 @@ python = ">=3.10,<3.12"
 [tool.poetry.group.test.dependencies]
 ragstack-ai-langflow = { path = "../../", develop = true }
 pytest = "^8.1.0"
-pytest-cov = "^4.1.0"
-pytest-mock = "^3.12.0"
-pytest-xdist = "^3.5.0"
 pytest-instafail = "^0.5.0"
-pytest-asyncio = "^0.23.0"
-pytest-profiling = "^1.7.0"
 pytest-sugar = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
@@ -37,7 +32,6 @@ addopts = "-ra"
 testpaths = ["integration_tests"]
 console_output_style = "progress"
 log_cli = true
-markers = ["async_test"]
 
 [tool.poetry.group.spelling]
 optional = true
@@ -56,6 +50,7 @@ line-length = 120
 [tool.mypy]
 plugins = ["pydantic.mypy"]
 follow_imports = "silent"
+exclude = "integration_tests/conftest.py"
 
 [build-system]
 requires = ["poetry-core"]
