move stuff up a level

--- a/ragstack/Makefile
+++ b/ragstack/Makefile
@@ -1,14 +1,14 @@
 .PHONY: format lint integ_tests
 
 integ_tests:
-	poetry run pytest integration_tests --instafail $(args)
+	poetry run pytest tests/integration_tests --instafail $(args)
 
 format:
-	poetry run ruff check . --fix
-	poetry run ruff format .
+	poetry run ruff check tests --fix
+	poetry run ruff format tests
 
 lint:
-	poetry run mypy --namespace-packages -p "integration_tests"
+	poetry run mypy --namespace-packages -p tests.integration_tests
 
 codespell:
 	@poetry install --with spelling
