Added MistralAI LLM and Embedding (#1865)
* Added Mistral AI LLM Model and added MistralAI embeddings.

* Added tracking to the new MistralAIEmbeddings.py and MistalModel.py

* Added MistralAI model specs and added the correct models list to the Mistral Model LLM component.

* Actually added the MistralAI model specs this time.

(cherry picked from commit 12d1a9a426e4bc90b6b4c07d85cce3baced7ea76)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,8 @@ zep-python = { version = "^2.0.0rc5", allow-prereleases = true }
 langchain-google-vertexai = "^1.0.3"
 langchain-groq = "^0.1.3"
 langchain-pinecone = "^0.1.0"
+langchain-mistralai ="^0.1.6"
+
 
 [tool.poetry.group.test.dependencies]
 ragstack-ai-langflow-base = { path = "./src/backend/base", develop = true }
