--- a/ragstack/pyproject.toml
+++ b/ragstack/pyproject.toml
@@ -16,6 +16,7 @@ ragstack-ai-langflow = { path = "../", develop = true }
 pytest = "^8.1.0"
 pytest-instafail = "^0.5.0"
 pytest-sugar = "^1.0.0"
+pytest-order = "^1.2.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.9.0"
@@ -25,6 +26,7 @@ ruff = "^0.3.5"
 minversion = "6.0"
 addopts = "-ra"
 testpaths = ["tests/integration_tests"]
+filterwarnings = ["ignore::DeprecationWarning"]
 console_output_style = "progress"
 log_cli = true
 
