use poetry to install

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,3 +138,7 @@ follow_imports = "silent"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.dockerize]
+extra-build-instructions = ["COPY src/backend /app/src/backend"]
+build-apt-packages = ["gcc"]
