--- a/ragstack/libs/core/pyproject.toml
+++ b/ragstack/libs/core/pyproject.toml
@@ -12,7 +12,7 @@ documentation = "https://docs.datastax.com/en/ragstack"
 python = ">=3.10,<3.12"
 
 [tool.poetry.group.test.dependencies]
-ragstack-ai-langflow = { path = "../", develop = true }
+ragstack-ai-langflow = { path = "../../..", develop = true }
 pytest = "^8.1.0"
 pytest-instafail = "^0.5.0"
 pytest-sugar = "^1.0.0"
